# Hackathon-CECI2025

./: .gitignore  CMakeLists.txt  Hackathon-CECI2025  LICENSE  Makefile  README.md  qr_decode.py
PhysicalStorage/: test
PhysicalStorage/headers/: storage.hpp  visualization.hpp
PhysicalStorage/output/: qr_code_0.pbm
PhysicalStorage/src/: main.cpp  storage.cpp  visualization.cpp
docs/slides/: slides.typ
include/: CellularAutomatonVisualizer.hpp  EGLManager.h  GPUCellularAutomaton.h  main.hpp
include/Encryption/: EncryptionHelper.hpp  Key.h
include/FormatManager/: DenisDecoder.hpp  DenisEncoder.hpp  DenisExtension.hpp  FileManagementHelper.hpp
include/PhysicalStorage/: CryptoUtils.h  HammingCode.h  MatrixChunker.h  PBMUtils.h  QRCodeStorage.hpp  QRCodeVisualizer.hpp  StorageCommon.hpp  chunker.h  common.hpp  utils.h  visualization.hpp
res/: decoded.txt  test.denis  test.txt
shaders/: gol_backward.glsl  gol_backward.h  gol_forward.glsl  gol_forward.h
src/: CellularAutomatonVisualizer.cpp  EGLManager.cpp  GPUCellularAutomaton.cpp  GPUCellularAutonmaton.cpp  chunker.cpp  main.cpp  main.py  utils.cpp
src/DenisFormat/: Decoder.py  Encoder.py  FormatHelper.py  __init__.py
src/Encryption/: EncryptionHelper.cpp  Key.cpp
src/FormatManager/: DenisDecoder.cpp  DenisEncoder.cpp  FileManagementHelper.cpp
src/PhysicalStorage/: CryptoUtils.cpp  HammingCode.cpp  MatrixChunker.cpp  PBMUtils.cpp  QRCodeStorage.cpp  QRCodeVisualizer.cpp  chunker.cpp  storage.cpp  utils.cpp  visualization.cpp
testfiles/: test.txt
